tests/ui/resolve/issue-118295.stderr
error: cannot find macro `macro_rules`
  --> $DIR/issue-118295.rs:1:1
   |
LL | macro_rules! {}
   | ^^^^^^^^^^^ not found in this scope
   |
note: maybe you have forgotten to define a name for this `macro_rules!`
  --> $DIR/issue-118295.rs:1:1
   |
LL | macro_rules! {}
   | ^^^^^^^^^^^

error: aborting due to 1 previous error

