tests/ui/resolve/issue-118295.rs
macro_rules! {}
//~^ ERROR cannot find macro `macro_rules`
//~| NOTE not found in this scope
//~| NOTE maybe you have forgotten to define a name for this `macro_rules!`

fn main() {}
